# hclib

./: README.md  fib2.cpp
hclibDefault/: README.md  clean.sh
hclibDefault/src/: Makefile.am  hclib-runtime.c
hclibDefault/src/inc/: hclib-internal.h
hclibDefault/test/: fib-reducer.cpp  fib.cpp
linked-list/: configure.ac
linked-list/inc/: hclib.mak
linked-list/src/: Makefile.am  hclib-linkedList.c  hclib-runtime.c  hclib_cpp.cpp
linked-list/test/: Makefile
powerEfficient/: README.md  install.sh
powerEfficient/inc/: hclib.hpp
powerEfficient/src/: Makefile.am  hclib-deque.c  hclib-likwid.c  hclib-runtime.c  hclib_cpp.cpp
powerEfficient/src/inc/: hclib-internal.h
powerEfficient/test/: Makefile  fib-reducer.cpp  qsort.cpp
private-deque/: Makefile.am
private-deque/inc/: hclib.h
private-deque/src/: hclib-deque.c  hclib-runtime.c
private-deque/src/inc/: hclib-atomics.h  hclib-deque.h  hclib-internal.h
slides/: projectBrief.md
src/: Makefile.am  hclib-runtime.c  hclib_cpp.cpp
src/inc/: hclib-internal.h  hclib-linkedList.h
test/: fib.cpp  fib2.cpp
traceAndReplay/: configure~
traceAndReplay/inc/: hclib.h  hclib.hpp
traceAndReplay/src/: hclib-deque.c  hclib-runtime.c
traceAndReplay/src/inc/: hclib-deque.h  hclib-internal.h
traceAndReplay/test/: Makefile  fib  fib-reducer  fib.cpp  fib2.cpp
